--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"php": ">=5.5"
 	},
 	"require-dev": {
-	    "satooshi/php-coveralls": "dev-master"
+	    "satooshi/php-coveralls": "dev-master",
+	    "psr/log": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
