--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	},
 	"require-dev": {
 	    "satooshi/php-coveralls": "dev-master",
-	    "psr/log": "dev-master"
+	    "psr/log": "1.0.0"
 	},
 	"autoload": {
 		"psr-4": {
